--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -8,6 +8,8 @@
   display: flex;
   position: relative;
   z-index: 0;
+  border: 0;
+  padding: 0;
 }
 
 .profile__avatar::before {
@@ -36,7 +38,6 @@
   height: 100%;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: center;
 }
 
 .profile__avatar:hover::after {
