--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -8,8 +8,12 @@
   display: flex;
   position: relative;
   z-index: 0;
-  border: 0;
+  border-width: 0;
   padding: 0;
+}
+
+.profile__avatar:focus {
+  outline: none;
 }
 
 .profile__avatar::before {
@@ -49,3 +53,6 @@
     margin-right: 0;
   }
 }
+
+
+
